--- a/css/base.css
+++ b/css/base.css
@@ -15,11 +15,11 @@ a{text-decoration: none;color:#777;}
 
 
 
+.themebtn .grey{background-color:#777;}
+.themebtn .blue{background-color:#4a83eb;}
+.themebtn .black{background: #222;}
 
-
-
-
-
+.middle{width:260px;}
 
 
 
