--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@ a{text-decoration: none;color:#777;}
 .themebtn .black{background: #222;}
 
 .middle{width:260px;}
-
+.padding20{padding:20px;}
 
 
 
