--- a/components/popin.html
+++ b/components/popin.html
@@ -54,7 +54,7 @@
                     </el-row>
                     <ul class="childnav" v-show="item.current">
                         <li v-for="child in item.child">
-                            <a :href="+child.parmas+'.html'" :class="{white:child.current}">{{child.childnav}}</a>
+                            <a :href="child.parmas+'.html'" :class="{white:child.current}">{{child.childnav}}</a>
                         </li>
                     </ul>
                 </li>
@@ -63,41 +63,12 @@
         <div class="main main2 fr">
             <div class="route clearfix"><span>表格</span></div>
             <div class="block padding20">
-                <template>
-                    <el-table
-                            :data="tableData"
-                            border
-                            style="width: 100%">
-                        <el-table-column
-                                prop="date"
-                                label="日期"
-                                width="180">
-                        </el-table-column>
-                        <el-table-column
-                                prop="name"
-                                label="姓名"
-                                width="180">
-                        </el-table-column>
-                        <el-table-column
-                                prop="address"
-                                label="地址">
-                        </el-table-column>
-                        <el-table-column
-                                fixed="right"
-                                label="操作"
-                                width="100">
-                            <template scope="scope">
-                                <el-button type="text" size="small" @click="lookdata">查看</el-button>
-                                <el-button type="text" size="small">编辑</el-button>
-                            </template>
-                        </el-table-column>
-                    </el-table>
-                </template>
+
             </div>
         </div>
     </el-row>
 </div>
 <script src="../js/axios.min.js"></script>
-<script src="../js/table.js"></script>
+<script src="../js/pic.js"></script>
 </body>
 </html>
