--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 header{padding:10px 4px;box-shadow:0 1px 4px #777;}
-.usernav{position: absolute;top:50px;right:0;width:100%;border:1px solid #dfdfdf;padding:10px 8px;}
-.usernav{z-index:5;display: none;}
+.usernav{position: absolute;top:59px;right:0;width:80%;border:1px solid #dfdfdf;padding:10px 8px;}
+.usernav{z-index:5;}
 .usernav li{line-height: 26px;}
 
 .usernav i{margin-right: 4px;}
@@ -40,17 +40,21 @@ h6 span{float: left;}
 h6 span:last-child{float: right;}
 h6 .icon{float: left;margin:0 6px;line-height:18px;font-size:18px;font-weight: 20px;cursor:pointer;}
 .block{border-radius: 6px;margin-bottom:20px;}
+.block .title{font-size: 22px;line-height: 40px;margin-bottom:10px;}
 .double div{box-sizing: border-box;}
 .double div:first-child{margin-right: 10px;}
 .double div:last-child{margin-left: 10px;}
-
+.route{line-height: 20px;margin-bottom:10px;font-size: 16px;}
+.route span{float: left;}
+.quote{margin:0 6px;}
 .shortcut,.theme{width:50%;}
 .themebtn{padding-top:30px;}
 .themebtn span{display: inline-block;margin:0 6px 0 20px;width:16px;height: 16px;border-radius: 50%;cursor: pointer;vertical-align: middle;}
 #quota{height: 400px;}
 
 .navBtn{display:none;position:fixed;top:82px;left:0;padding:10px;border-radius: 6px;background: rgba(122,122,122,0.5);z-index:5;box-shadow: 0 0 6px #fff inset;}
-.navBtn i{font-size: 20px;color:#fff;font-weight: bold;}
+table .el-button+.el-button{margin-left:0 !important;}
+.main2,.main2 .block{height: 100%;}
 /*animate*/
 nav div i{transition:all .6s;}
 nav .current i:last-child{transform: rotate(180deg)}
